--- a/res/layout/activity_play_video.xml
+++ b/res/layout/activity_play_video.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -13,12 +13,12 @@
         android:layout_weight="1"
         android:background="@color/color_white">
     </ListView>
-    
+
     <VideoView
         android:id="@+id/video_view"
-        android:layout_width="430dp"
-        android:layout_height="match_parent" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
 
-
-
-</LinearLayout>
+</RelativeLayout>
