--- a/res/layout/activity_play_video.xml
+++ b/res/layout/activity_play_video.xml
@@ -1,24 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context=".PlayVideoActivity"
-    android:id="@+id/play_video_layout"
-    android:background="@drawable/background" >
-
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@color/color_white">
-    </ListView>
+    android:layout_height="fill_parent" 
+    android:background="#000000">
 
     <VideoView
         android:id="@+id/video_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+    />
+    
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|center"
+        android:orientation="vertical"
+        android:background="@color/color_white">
+    </ListView>
 
-</RelativeLayout>
+</FrameLayout>
