--- a/res/layout/activity_play_video.xml
+++ b/res/layout/activity_play_video.xml
@@ -12,11 +12,11 @@
     
     <ListView
         android:id="@+id/listView1"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left|center"
         android:orientation="vertical"
-        android:background="@color/color_white">
+        android:background="#ffffff">
     </ListView>
 
 </FrameLayout>
