--- a/res/menu/activity_play_video.xml
+++ b/res/menu/activity_play_video.xml
@@ -2,6 +2,5 @@
     <item android:id="@+id/browse_files_play" 
         android:title="@string/menu_open" 
         android:showAsAction="ifRoom|withText" 
-        android:icon="@drawable/menu_icon_open"
-        android:onClick="listFile"></item>
+        android:icon="@drawable/menu_icon_open"></item>
 </menu>
