--- a/res/layout/activity_play_video.xml
+++ b/res/layout/activity_play_video.xml
@@ -13,10 +13,84 @@
     <ListView
         android:id="@+id/listView1"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:layout_gravity="left|center"
         android:orientation="vertical"
         android:background="#ffffff">
     </ListView>
-
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/customized_media_controller_layout"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" 
+	    android:layout_gravity="bottom"
+	    android:background="#000000"
+	    android:visibility="invisible">
+        
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal" 
+		    android:gravity="center">
+		    
+            <ImageButton
+                android:contentDescription="@string/rewind_button_description"
+		        android:id="@+id/button_jump_left"
+		        android:layout_width="50dp"
+		        android:layout_height="50dp"
+		        android:src="@drawable/rewind"
+		        android:background="@null"
+		        />
+	 
+		    <ImageButton
+		        android:contentDescription="@string/pause_play_button_description"
+		        android:id="@+id/button_pause_play"
+		        android:layout_width="50dp"
+		        android:layout_height="50dp"
+		        android:src="@drawable/pause"
+		        android:background="@null"
+		        android:layout_marginLeft="60dp"
+				android:layout_marginRight="60dp"
+		        />
+		 
+		    <ImageButton
+		        android:contentDescription="@string/forward_button_description"
+		        android:id="@+id/button_jump_right"
+		        android:layout_width="50dp"
+		        android:layout_height="50dp"
+		        android:src="@drawable/fast_forward"
+		        android:background="@null"
+		        />
+            
+		</LinearLayout>
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal"
+		    android:gravity="center"
+		    >
+            <TextView
+	            android:id="@+id/seek_bar_time"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textColor="#ffffff"
+	            android:textAlignment="viewStart"
+	        />           
+	        <SeekBar
+		        android:id="@+id/seek_bar"
+		        android:layout_width="700dp"
+		        android:layout_height="wrap_content"
+	    	/>
+      		<TextView
+	            android:id="@+id/total_time"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textColor="#ffffff"
+	            android:textAlignment="viewEnd"
+	        />
+        </LinearLayout>
+    </LinearLayout>
+   
 </FrameLayout>
